Adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá Mundo</h1>
     <hr>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos non aut doloremque cupiditate quisquam voluptatum, nam possimus, omnis molestiae in necessitatibus esse! Omnis pariatur, inventore expedita iusto dolorem dolores voluptatum.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi distinctio labore, voluptatum autem totam sit, atque animi molestias dolorum rerum vel modi fugit reprehenderit reiciendis illo est! Recusandae, praesentium et!</p>
 </body>
 </html>
